Algunos cambios de información
Algunos cambios

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,20 +18,20 @@ import "../styles/styles.css";
         <ul>
           <li>📧 wilmer@panadero.co</li>
           <li>📞 +57 3174650071</li>
-          <li>📍 Palermo, Huila</li>
+          <li>📍 Colombia, Palermo, Huila</li>
         </ul>
       </div>
 
       <div class="columna columna-25">
         <h3>Síguenos</h3>
         <ul>
-          <li><a href="#"><i class="fa-brands fa-facebook"></i> Facebook</a></li>
+          <li><a href="https://www.facebook.com/share/1Bmf5EdSkv/" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a></li>
         </ul>
       </div>
     </div>
   </div>
 
   <div class="barra-footer">
-    &copy; 2025 Panadería la Mía - Todos los derechos reservados
+    &copy; 2025 Panadería la Mía - Julian Andrés, Wimer Felipe
   </div>
 </footer>
