--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,6 @@ import "../styles/styles.css";
   <main>
 
 
-
-
     <!-- ========== INICIO ========== -->
     <section id="inicio">
       <img src="/img/PanaderiaWilmer.jpg" alt="Panadería la Mía" />
@@ -31,8 +29,7 @@ import "../styles/styles.css";
         <a href="#nosotros" class="boton boton-aqua">Ver más</a>
       </div>
     </section>
-
-
+</main>
     
     <!-- ========== NOSOTROS ========== -->
     <section id="nosotros" class="seccion">
