--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,9 @@ import "../styles/styles.css";
       <div class="columna columna-25">
         <img src="/img/logo.jpg" alt="Logo Street Food" class="logo-footer">
         <p>
-          Panadería casera de Wilmer, un duro para el pan, un duro para todo
+          <i>
+          "Panadería casera de Wilmer, un duro para el pan, un duro para todo"
+        </i> 
         </p>
       </div>
 
