--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,6 +13,8 @@ import "../styles/styles.css";
       <a href="/#servicios">Servicios</a>
       <a href="/#galeria">Galería</a>
       <a href="/#contacto">Contáctanos</a>
+      <a href="/comentarios">Comentarios</a>
+
     </nav>
   </div>
 </header>
