--- a/src/pages/bebidas.astro
+++ b/src/pages/bebidas.astro
@@ -20,7 +20,7 @@ import "../styles/styles.css";
 
         <div class="row">
     <!-- ========== SERVICIOS ========== -->
-    <section id="servicios" class="seccion">
+    <section id="bebidas" class="seccion">
       <div class="container">
         <div class="row">
 
@@ -31,7 +31,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Gaseosa Personal Cocacola</h3>
-                <p>$2500</p>
+                <p>$2500 COP</p>
               </div>
             </div>
           </div>
@@ -43,7 +43,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Gaseosa Personal Postobon</h3>
-                <p>$2500</p>
+                <p>$2500 COP</p>
               </div>
             </div>
           </div>
@@ -55,7 +55,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Avena</h3>
-                <p>$1500</p>
+                <p>$1500 COP</p>
               </div>
             </div>
           </div>
@@ -66,8 +66,8 @@ import "../styles/styles.css";
                 <img src="img/colombiana.jpg" alt="Gaseosa colombiana">
               </div>
               <div class="bloque-contenido-servicio">
-                <h3>Gaseosa colombiana personal</h3>
-                <p>$2500</p>
+                <h3>Gaseosa colombiana</h3>
+                <p>$2500 COP</p>
               </div>
             </div>
           </div>
@@ -79,7 +79,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Jugo Hit</h3>
-                <p>$1500</p>
+                <p>$1500 COP</p>
               </div>
             </div>
           </div>
