--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ import "../styles/styles.css";
                 <img src="/img/Pasteles papa.jpg" alt="Buñuelos, pasteles y empanadas">
               </div>
               <div class="bloque-contenido-servicio">
-                <h3>Buñuelos, pasteles y empanadas</h3>
+                <h3>Buñuelos y más</h3>
                 <p>Buñuelos, pasteles de papa, huevo, carne, arroz y empanadas para tu cena.</p>
                 <a href="/pasteles-buñuelos-empanadas" class="boton boton-blanco">Ver más</a>
               </div>
