--- a/src/pages/panes.astro
+++ b/src/pages/panes.astro
@@ -31,7 +31,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Pan coco</h3>
-                <p>$500</p>
+                <p>$500 COP</p>
               </div>
             </div>
           </div>
@@ -43,7 +43,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Mojicon</h3>
-                <p>$1000</p>
+                <p>$1000 COP</p>
               </div>
             </div>
           </div>
@@ -55,7 +55,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Pan Rollo</h3>
-                <p>$1500</p>
+                <p>$1500 COP</p>
               </div>
             </div>
           </div>
@@ -67,7 +67,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Pan Con Doble de Queso</h3>
-                <p>$3000</p>
+                <p>$3000 COP</p>
               </div>
             </div>
           </div>
@@ -81,7 +81,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Mojicon Grande</h3>
-                <p>$2500</p>
+                <p>$2500 COP</p>
               </div>
             </div>
           </div>
