--- a/src/pages/pasteles-buñuelos-empanadas.astro
+++ b/src/pages/pasteles-buñuelos-empanadas.astro
@@ -31,7 +31,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Pasteles de pollo</h3>
-                <p>$2500</p>
+                <p>$2500 COP</p>
               </div>
             </div>
           </div>
@@ -43,7 +43,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Buñuelos</h3>
-                <p>$1000</p>
+                <p>$1000 COP</p>
               </div>
             </div>
           </div>
@@ -55,7 +55,7 @@ import "../styles/styles.css";
               </div>
               <div class="bloque-contenido-servicio">
                 <h3>Empanadas de carne</h3>
-                <p>$1500</p>
+                <p>$1500 COP</p>
               </div>
             </div>
           </div>
